--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "django>=6.0",
+    "psycopg2-binary>=2.9.11",
+    "pycountry>=24.6.1",
 ]
