feat: Enhance development environment with debugging tools
-Adding test cases to auth endpoints in account app
- Added django-debug-toolbar and related dependencies for improved debugging during development.
- Updated settings.py to include debug toolbar in installed apps and middleware.
- Configured internal IPs for the debug toolbar to function correctly.
- Modified URL patterns to integrate debug toolbar URLs for easier access to debugging information.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,12 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "pycountry>=24.6.1",
 ]
+
+[dependency-groups]
+dev = [
+    "django-debug-toolbar>=6.1.0",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-django>=4.11.1",
+    "pytest-watch>=4.2.0",
+]
