--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
     "drf-spectacular>=0.29.0",
+    "mysqlclient>=2.2.7",
     "pillow>=12.0.0",
     "psycopg2-binary>=2.9.11",
     "pycountry>=24.6.1",
