--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy
-        uses: umuttopalak/pythonanywhere-deploy-action@v1.1.0
+      - name: SSH Remote Command
+        uses: appleboy/ssh-action@master
         with:
-          host: 'www.pythonanywhere.com'
+          host: ssh.pythonanywhere.com
           username: ${{ secrets.PA_USERNAME }}
-          api_token: ${{ secrets.PA_API_TOKEN }}
-          domain_name: 'ahmed3atef.pythonanywhere.com'
+          password: ${{ secrets.PA_PASSWORD }} 
+          script: |
+            cd ~/E-Commerce_System
+            git pull
+            source ~/.virtualenvs/ecom_env/bin/activate
+            python manage.py migrate
+            touch /var/www/ahmed3atef_pythonanywhere_com_wsgi.py
