--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,15 +7,18 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: SSH Remote Command
-        uses: appleboy/ssh-action@master
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ssh.pythonanywhere.com
           username: ${{ secrets.PA_USERNAME }}
-          password: ${{ secrets.PA_PASSWORD }} 
+          key: ${{ secrets.PA_SSH_KEY }}
+          script_stop: false
           script: |
+            export PATH=$PATH:/home/${{ secrets.PA_USERNAME }}/.local/bin
             cd ~/E-Commerce_System
-            git pull
+            git pull origin main
             source ~/.virtualenvs/ecom_env/bin/activate
+            pip install -r requirements.txt
             python manage.py migrate
-            touch /var/www/ahmed3atef_pythonanywhere_com_wsgi.py
+            touch /var/www/${{ secrets.PA_DOMAIN_NAME }}_wsgi.py
