--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "django>=6.0",
     "django-filter>=25.2",
+    "django-redis>=6.0.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
     "drf-spectacular>=0.29.0",
@@ -14,6 +15,7 @@ dependencies = [
     "pillow>=12.0.0",
     "psycopg2-binary>=2.9.11",
     "pycountry>=24.6.1",
+    "redis>=7.1.0",
 ]
 
 [dependency-groups]
