--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,9 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=ECOMMERCE.settings
+DJANGO_SETTINGS_MODULE=ECOMMERCE.settings.dev
 addopts = --reuse-db
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "ECOMMERCE.settings"
+DJANGO_SETTINGS_MODULE = "ECOMMERCE.settings.dev"
 
 python_files = tests.py test_*.py *_tests.py
 
